# mnist-pytorch-lightning

./: README.md  pyproject.toml
lightning_source/: dataset.py  main.py  model.py
src/: main.py  model.py
