[tool.poetry]
name = "mnist-pytorch-lightning"
version = "0.1.0"
description = ""
authors = ["Shumpei-Kikuta <shunpei-kikuta775@g.ecc.u-tokyo.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
torch = "1.4.0"
pytorch-lightning = "^1.1.2"
torchvision = "0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
